# nontoxic-world

./: .gitignore  README.md  compose.yaml  pyproject.toml
back-end/: Dockerfile  pyproject.toml
back-end/app/: main.py  models.py  preprocessing.py  schemas.py  services.py
experiments/: baseline_tfidf_logreg.md  eda_report.md  preprocessing_plan.md  project_summary.md
front-end/: Dockerfile  app.py  pyproject.toml
front-end/assets/: styles.css
front-end/components/: input.py  prediction.py  visualization.py
front-end/services/: api_client.py
front-end/services.py/: api_client.py
front-end/utils/: helpers.py
notebooks/: 00_define_problem.ipynb  01_get_data.ipynb  02_explore_data_analysis.ipynb  03_preprocessing_and_tokenization.ipynb  04_baseline_model.ipynb  05_build-deep-sequential-models.ipynb  05_build_models_and_train_from_scratch.ipynb  06_build_models_with_pretrained_embeddings.ipynb
