[project]
name = "nontoxic-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
    "tokenizers>=0.22.2",
    "transformers>=5.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "scikit-learn>=1.8.0",
    "pytest>=9.0.2",
    "wandb>=0.25.1",
    "torchmetrics>=1.9.0",
    "nbformat>=5.10.4",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
