[project]
name = "nontoxic-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tokenizers>=0.22.2",
    "transformers>=5.3.0",
    "torch>=2.9.1",
    "fastapi[standard]>=0.135.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.42.0",
    "huggingface-hub>=1.5.0"
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
